[tool.poetry]
name = "GammaTenantManager"
version = "0.1.0"
description = "A bridge between the Symphony self-service portal and the Salesforce backend."
authors = ["Kevin McGrath <kevin.mcgrath@symphony.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiosfstream = "^0.5.0"
dnspython = "^2.0.0"
jsonpickle = "^1.4.1"
pymongo = "^3.11.0"
requests = "^2.24.0"
simple-salesforce = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
